--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+.site-layout-content {
+  min-height: 800px;
+  padding: 24px;
+  margin-top: 50px;
+  background: #fff;
+}
+.imagen {
+  border-radius: 10px;
+  margin: 10px 50px;
+}
+.letter {
+  margin: 10px 80px;
+}
+.card {
+  display: flex;
+  margin-left: 80px;
+}
+.content {
+  display: flex;
+}
